(lang dune 3.16)

(name selective_cps_stlc)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Yunkai Zhang")

(maintainers "Yunkai Zhang")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name selective_cps_stlc)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
